--- a/manipulate_data.ipynb
+++ b/manipulate_data.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4a800bfa",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
     ") -> Tuple:\n",
     "    \"\"\"Select columns for query_id from queries dataframe.\"\"\"\n",
     "    row = QUERIES[QUERIES[\"query.query_id\"] == query_id]\n",
-    "    print(row[properties[0]])\n",
+    "    # print(row[properties[0]])\n",
     "    return tuple(row[prop].iloc[0] for prop in properties)\n",
     "    # row[prop].iloc[0] returns a scalar value (at position 0) instead of a Series\n",
     "\n",
@@ -180,8 +180,8 @@
     "    return (system_prompt, user_prompt)\n",
     "\n",
     "\n",
-    "def get_id_for_manipulated_doc_or_query(original_doc_id: int) -> int:\n",
-    "    id_str = \"1\" + str(original_doc_id).zfill(5)\n",
+    "def get_id_for_manipulated_doc_or_query(original_doc_id: int, prefix_number=1) -> int:\n",
+    "    id_str = str(prefix_number) + str(original_doc_id).zfill(5)\n",
     "    return int(id_str)\n",
     "\n",
     "\n",
@@ -548,53 +548,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ee5f5ea2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chief judge according to the court judgment of Danbury, Pinehurst, Court\n",
-      "J. Smith\n",
-      "In this task you will be given a factual question and a standard answer to that question. Your task is the following:\n",
-      "1. Change the fact in the answer.\n",
-      "2. Restructure the changed question-answer-pair as a single statement in tabular form. The first column \"description\" contains the statement without the actual fact. The second column \"value\" contains the actual fact. Make sure that the description contains all the information from the question and answer except the fact. Return \"description\" and \"value\".\n",
-      "\n",
-      "Examples:\n",
-      "Question: When did changes in the Board of Directors occur?\n",
-      "Standard Answer: December 2021\n",
-      "answer_new: October 2021\n",
-      "description: Month, in which changes in the Board of Directors occured\n",
-      "value: October 2021\n",
-      "\n",
-      "Question: Which type of firm did Grand Adventures Tourism Ltd. hire in September 2021?\n",
-      "Standard Answer: Forensic accounting firm\n",
-      "answer_new: Legal consultation firm\n",
-      "description: Type of firm that Grand Adventures Tourism Ltd. hired in September 2021\n",
-      "value: Legal consultation firm\n",
-      "\n",
-      "Question: How much did Green Fields Agriculture Ltd. invest in Project Greenhouse in December 2021?\n",
-      "Standard Answer: $15 million\n",
-      "answer_new: $19 million\n",
-      "description: Dollars invested in Project Greenhouse by Green Fields Agriculture Ltd. in December 2021\n",
-      "value: $19 million\n",
-      "\n",
-      "Test case:\n",
-      "Question: According to the court judgment of Danbury, Pinehurst, Court, who was the chief judge?\n",
-      "Standard_answer: C. Ward.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(response.description)\n",
-    "print(response.value)\n",
+    "with open(\"doc_query_mapping_multi.csv\", \"r\", newline=\"\") as f:\n",
+    "    reader = csv.DictReader(f, fieldnames=[\"doc_id\", \"query_id_single\", \"query_id_multi\"])\n",
+    "    next(reader)\n",
+    "    mapping = [{\"doc_id\": int(row[\"doc_id\"]), \"query_id\": int(row[\"query_id_multi\"])} for row in reader]\n",
     "\n",
-    "doc_entry = \n",
     "\n",
+    "for id_pair in mapping[1:]:\n",
+    "    doc_id = id_pair[\"doc_id\"]\n",
+    "    query_id = id_pair[\"query_id\"]\n",
+    "    system_prompt, user_prompt = get_prompts_man_tabular(query_id)\n",
+    "    response: TabularDataResponse = openai_interface(system_prompt, user_prompt, TabularDataResponse)\n",
     "\n",
-    "print(user_prompt)"
+    "    manipulated_doc_entry = get_doc_by_id(doc_id).copy()\n",
+    "    manipulated_doc_entry.doc_id = get_id_for_manipulated_doc_or_query(doc_id, prefix_number=2)\n",
+    "    manipulated_doc_entry.content = \" | \".join([response.description, response.value])\n",
+    "    manipulated_doc_entry = pd.concat([manipulated_doc_entry, pd.Series([doc_id], index=[\"original_doc_id\"])])\n",
+    "\n",
+    "    save_manipulated_doc(**manipulated_doc_entry)"
    ]
   }
  ],
