incorporate entity into tabular data

--- a/manipulate_data.ipynb
+++ b/manipulate_data.ipynb
@@ -84,8 +84,8 @@
     "    return user_prompt.format(question=question, ground_truth=answer)\n",
     "\n",
     "\n",
-    "def format_prompt_tabular(user_prompt: str, question: str, answer: str) -> str:\n",
-    "    return user_prompt.format(question=question, answer=answer)\n",
+    "def format_prompt_tabular(user_prompt: str, question: str, answer: str, entity: str) -> str:\n",
+    "    return user_prompt.format(question=question, answer=answer, entity=entity)\n",
     "\n",
     "\n",
     "def get_query_ids_for_doc(doc_id: int, query_types: list[str] = [\"Factual Question\"]) -> list[int]:\n",
@@ -108,9 +108,16 @@
     ") -> Tuple:\n",
     "    \"\"\"Select columns for query_id from queries dataframe.\"\"\"\n",
     "    row = QUERIES[QUERIES[\"query.query_id\"] == query_id]\n",
-    "    # print(row[properties[0]])\n",
     "    return tuple(row[prop].iloc[0] for prop in properties)\n",
-    "    # row[prop].iloc[0] returns a scalar value (at position 0) instead of a Series\n",
+    "\n",
+    "\n",
+    "def get_doc_properties(\n",
+    "    doc_id,\n",
+    "    properties,\n",
+    ") -> Tuple:\n",
+    "    \"\"\"Select columns for doc_id from docs dataframe.\"\"\"\n",
+    "    row: pd.DataFrame = DOCUMENTS[DOCUMENTS[\"doc_id\"] == doc_id].dropna(axis=1)\n",
+    "    return tuple(row[prop].iloc[0] for prop in properties if prop in row.columns)\n",
     "\n",
     "\n",
     "def get_doc_text(doc_id: int) -> str:\n",
@@ -172,11 +179,12 @@
     "    return (system_prompt, user_prompt)\n",
     "\n",
     "\n",
-    "def get_prompts_man_tabular(query_id: int) -> Tuple:\n",
+    "def get_prompts_man_tabular(query_id: int, doc_id: int) -> Tuple:\n",
     "    user_prompt = read_prompt(\"prompts/json/create_tabular_docs.json\")[\"prompt\"]\n",
     "    system_prompt = \"You are an expert in manipulation and transformation of textual data.\"\n",
     "    answer, question = get_query_properties(query_id, properties=[\"ground_truth.content\", \"query.content\"])\n",
-    "    user_prompt = format_prompt_tabular(user_prompt, question, answer)\n",
+    "    (entity,) = get_doc_properties(doc_id, [\"hospital_patient_name\", \"company_name\", \"court_name\"])\n",
+    "    user_prompt = format_prompt_tabular(user_prompt, question, answer, entity)\n",
     "    return (system_prompt, user_prompt)\n",
     "\n",
     "\n",
@@ -207,7 +215,7 @@
     "    with open(filename, \"a+\", newline=\"\") as f:\n",
     "        if not is_empty:\n",
     "            f.seek(0)\n",
-    "            reader = csv.DictReader(f, fieldnames=params.keys())\n",
+    "            reader = csv.DictReader(f, fieldnames=doc_columns_ordered + [\"original_doc_id\"])\n",
     "            ids_present = {int(row[\"doc_id\"]) for row in list(reader)[1:]}\n",
     "            id_exists = int(doc_id) in ids_present\n",
     "\n",
@@ -215,7 +223,7 @@
     "            print(f\"WARN: Row with ID {doc_id} already exists. Did not write new document to '{filename}'.\")\n",
     "            return\n",
     "\n",
-    "        writer = csv.DictWriter(f, fieldnames=params.keys(), extrasaction=\"ignore\")\n",
+    "        writer = csv.DictWriter(f, fieldnames=doc_columns_ordered + [\"original_doc_id\"], extrasaction=\"ignore\")\n",
     "        if is_empty:\n",
     "            writer.writeheader()\n",
     "        writer.writerow(params)\n",
@@ -466,38 +474,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARN: Row with ID 100134 already exists. Did not write new document to 'data/additional_data/docs/fact_single_manipulations.csv'.\n",
-      "WARN: Row with ID 104620 already exists. Did not write new document to 'data/additional_data/queries/fact_single_manipulations.csv'.\n",
-      "Finished processing doc 134 and query 4620.\n",
-      "Finished processing doc 136 and query 4612.\n",
-      "Finished processing doc 139 and query 4643.\n",
-      "Finished processing doc 46 and query 2856.\n",
-      "Finished processing doc 47 and query 2246.\n",
-      "Finished processing doc 179 and query 5959.\n",
-      "Finished processing doc 52 and query 2509.\n",
-      "Finished processing doc 181 and query 5978.\n",
-      "Finished processing doc 59 and query 2698.\n",
-      "Finished processing doc 66 and query 2933.\n",
-      "Finished processing doc 198 and query 6143.\n",
-      "Finished processing doc 71 and query 2538.\n",
-      "Finished processing doc 72 and query 3189.\n",
-      "Finished processing doc 199 and query 6149.\n",
-      "Finished processing doc 77 and query 2378.\n",
-      "Finished processing doc 78 and query 2833.\n",
-      "Finished processing doc 79 and query 2728.\n",
-      "Finished processing doc 208 and query 6225.\n",
-      "Finished processing doc 209 and query 6234.\n",
-      "Finished processing doc 207 and query 6215.\n",
-      "Finished processing doc 205 and query 6192.\n",
-      "Finished processing doc 212 and query 6268.\n",
-      "Finished processing doc 211 and query 6243.\n",
-      "Finished processing doc 112 and query 4370.\n",
-      "Finished processing doc 114 and query 4390.\n",
-      "Finished processing doc 115 and query 4402.\n",
-      "Finished processing doc 119 and query 4466.\n",
-      "Finished processing doc 123 and query 4480.\n",
-      "Finished processing doc 125 and query 4530.\n",
-      "Finished processing doc 127 and query 4521.\n"
+      "WARN: Row with ID 104620 already exists. Did not write new query to 'data/additional_data/queries/fact_single_manipulations.csv'.\n",
+      "Finished processing doc 134 and query 4620.\n"
      ]
     }
    ],
@@ -548,21 +526,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "ee5f5ea2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entity: Danbury, Pinehurst, Court\n",
+      "Entity: Upton, Georgetown, Court\n",
+      "Entity: Glenwood, Quailwood, Court\n",
+      "Entity: JetWing Aviation\n",
+      "WARN: Row with ID 200046 already exists. Did not write new document to 'data/additional_data/docs/fact_multi_manipulations.csv'.\n",
+      "Entity: CleanCo Housekeeping Services\n",
+      "Entity: Parker General Hospital_Y. Evans\n",
+      "Entity: EduCorp\n",
+      "Entity: Farmington General Hospital_J. Brooks\n",
+      "Entity: Retail Emporium\n",
+      "Entity: Buildcorp Holdings\n",
+      "Entity: Southport General Hospital_K. Mendoza\n",
+      "Entity: ABC Education Corporation\n",
+      "Entity: MediaCorp\n",
+      "Entity: Wilton General Hospital_H. Flores\n",
+      "Entity: Energen Solutions Ltd\n",
+      "Entity: InnovateTech, Inc.\n",
+      "Entity: Elevate Retail Inc.\n",
+      "Entity: Newport General Hospital_V. Lewis\n",
+      "Entity: Knoxville City Hospital_S. Moore\n",
+      "Entity: Kingsport Medical Center_E. Chavez\n",
+      "Entity: Oxford General Hospital_G. Gonzalez\n",
+      "Entity: Bridgewater General Hospital_J. Reyes\n",
+      "Entity: Tremont City Hospital_X. Price\n",
+      "Entity: Bayside, Roseville, Court\n",
+      "Entity: Trenton, Eastwood, Court\n",
+      "Entity: Urbana, Belmont, Court\n",
+      "Entity: Riverton, Hamilton, Court\n",
+      "Entity: Sterling, Quarryville, Court\n",
+      "Entity: Hartford, Ashland, Court\n",
+      "Entity: Hamilton, Harrison, Court\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "\n",
     "with open(\"doc_query_mapping_multi.csv\", \"r\", newline=\"\") as f:\n",
     "    reader = csv.DictReader(f, fieldnames=[\"doc_id\", \"query_id_single\", \"query_id_multi\"])\n",
     "    next(reader)\n",
     "    mapping = [{\"doc_id\": int(row[\"doc_id\"]), \"query_id\": int(row[\"query_id_multi\"])} for row in reader]\n",
     "\n",
     "\n",
-    "for id_pair in mapping[1:]:\n",
+    "for id_pair in mapping:\n",
     "    doc_id = id_pair[\"doc_id\"]\n",
     "    query_id = id_pair[\"query_id\"]\n",
-    "    system_prompt, user_prompt = get_prompts_man_tabular(query_id)\n",
+    "    system_prompt, user_prompt = get_prompts_man_tabular(query_id, doc_id)\n",
+    "\n",
     "    response: TabularDataResponse = openai_interface(system_prompt, user_prompt, TabularDataResponse)\n",
     "\n",
     "    manipulated_doc_entry = get_doc_by_id(doc_id).copy()\n",
