--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,24 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### take user_prompt from the txt folder and create a json-formatted prompt\n",
+    "\n",
     "import os\n",
     "import json\n",
+    "from typing import Literal\n",
     "\n",
-    "# name = \"generate_keypoints\"\n",
-    "name = \"create_tabular_docs\"\n",
-    "file_name_txt = name + \".txt\"\n",
-    "file_name_json = name + \".json\"\n",
+    "filename: Literal[\"manipulation_textual\", \"manipulation_tabular\"]\n",
+    "system_prompts = {\n",
+    "    \"textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
+    "}\n",
+    "\n",
+    "filename = \"manipulation_tabular\"\n",
+    "\n",
+    "system_prompt = system_prompts[\"tabular\"] if filename == \"manipulation_tabular\" else \"\"\n",
+    "system_prompt = system_prompts[\"textual\"] if filename == \"manipulation_textual\" else \"\"\n",
+    "\n",
+    "file_name_txt = filename + \".txt\"\n",
+    "file_name_json = filename + \".json\"\n",
     "\n",
     "with open(os.path.join(\"txt\", file_name_txt), \"r\") as f:\n",
-    "    content = f.read()\n",
+    "    user_prompt = f.read()\n",
     "\n",
     "with open(os.path.join(\"json\", file_name_json), \"w\") as f:\n",
-    "    json.dump({\"prompt\": content}, f)"
+    "    content = {\"prompt_name\": filename, \"system_prompt\": system_prompt, \"user_prompt\": user_prompt}\n",
+    "    json.dump(content, f)"
    ]
   }
  ],
