--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "f5ce678d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "4a800bfa",
    "metadata": {},
    "outputs": [],
@@ -100,12 +100,11 @@
     "import os\n",
     "from typing import Literal\n",
     "import sys\n",
+    "import json\n",
     "\n",
-    "from utils.utils import read_prompt\n",
-    "\n",
-    "DOCUMENTS = pd.read_csv(\"data/DRAGONball/en/docs.csv\")\n",
+    "DOCUMENTS = pd.read_csv(\"DRAGONball/en/docs.csv\")\n",
     "QUERIES = pd.read_csv(\n",
-    "    \"data/DRAGONball/en/queries_flattened.csv\",\n",
+    "    \"DRAGONball/en/queries_flattened.csv\",\n",
     "    converters={\n",
     "        \"ground_truth.doc_ids\": ast.literal_eval,\n",
     "        \"ground_truth.keypoints\": ast.literal_eval,\n",
@@ -124,6 +123,11 @@
     "    answer_new: str\n",
     "    description: str\n",
     "    value: str\n",
+    "\n",
+    "def read_prompt(path: str | os.PathLike) -> Dict:\n",
+    "    \"\"\"Reads from JSON-file\"\"\"\n",
+    "    with open(path, \"r\") as f:\n",
+    "        return json.load(f)\n",
     "\n",
     "\n",
     "def format_user_prompt_textual(user_prompt: str, text: str, question: str, answer: str, references: str) -> str:\n",
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 13,
    "id": "f9ef2253",
    "metadata": {},
    "outputs": [
@@ -365,18 +369,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c4d2f8e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output written to 'docs_to_manipulate_all_info.csv'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Describe documents to manipulate\n",
     "with open(\"docs_to_manipulate.csv\", \"r\", newline=\"\") as f:\n",
@@ -386,14 +382,13 @@
     "    for row in reader:\n",
     "        ids.add(int(row[0]))\n",
     "\n",
-    "documents_to_manipulate = documents[documents[\"doc_id\"].isin(ids)]\n",
-    "documents_to_manipulate.to_csv(\"docs_to_manipulate_all_info.csv\", index=False, columns=COLUMNS_DOCS)\n",
-    "print(f\"Output written to 'docs_to_manipulate_all_info.csv'\")"
+    "documents_to_manipulate = DOCUMENTS[DOCUMENTS[\"doc_id\"].isin(ids)]\n",
+    "# documents_to_manipulate[[\"doc_id\", \"domain\", \"company_name\", \"court_name\", \"hospital_patient_name\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "id": "e800283b",
    "metadata": {},
    "outputs": [
@@ -406,7 +401,7 @@
     }
    ],
    "source": [
-    "### Create doc-query-query mapping\n",
+    "### -DEPRECATED- Create doc-query-query mapping\n",
     "try:\n",
     "    if os.path.exists(\"doc_query_mapping_multi.csv\"):\n",
     "        raise FileExistsError\n",
@@ -440,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "45b4aee6",
    "metadata": {},
    "outputs": [
@@ -453,7 +448,7 @@
     }
    ],
    "source": [
-    "### Select a single query per document of type \"Factual Question\"\n",
+    "### -DEPRECATED- Select a single query per document of type \"Factual Question\"\n",
     "\n",
     "\n",
     "doc_ids_for_man = set()\n",
@@ -543,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "ee5f5ea2",
    "metadata": {},
    "outputs": [
@@ -585,7 +580,7 @@
     }
    ],
    "source": [
-    "### manipulate documents (tabular)\n",
+    "### manipulate documents (tabular) and save rows\n",
     "mapping = get_doc_query_mapping(\"tabular\")\n",
     "\n",
     "doc_entries = []\n",
@@ -607,7 +602,7 @@
     "    manipulated_doc_entry = pd.concat([manipulated_doc_entry, additional_fields])\n",
     "\n",
     "    save_manipulated_doc(\n",
-    "        filename=\"data/additional_data/docs/tabular_manipulations_result_rows.csv\",\n",
+    "        filename=\"additional_data/docs/tabular_manipulations_result_rows.csv\",\n",
     "        fieldnames=COLUMNS_DOCS_MANIPULATED_TABULAR_ROW,\n",
     "        **manipulated_doc_entry,\n",
     "    )"
@@ -615,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "83fa5280",
    "metadata": {},
    "outputs": [
@@ -630,8 +625,8 @@
     }
    ],
    "source": [
-    "### aggregate tabular rows\n",
-    "tabular_docs = pd.read_csv(\"data/additional_data/docs/tabular_manipulations_result_rows.csv\")\n",
+    "### aggregate tabular rows and save docs\n",
+    "tabular_docs = pd.read_csv(\"additional_data/docs/tabular_manipulations_result_rows.csv\")\n",
     "\n",
     "\n",
     "def list_or_none(series):\n",
@@ -666,7 +661,7 @@
     "\n",
     "for row_dict in aggregation.to_dict(orient=\"records\"):\n",
     "    save_manipulated_doc(\n",
-    "        \"data/additional_data/docs/tabular_manipulations_result.csv\",\n",
+    "        \"additional_data/docs/tabular_manipulations_result.csv\",\n",
     "        fieldnames=COLUMNS_DOCS_MANIPULATED_TABULAR,\n",
     "        **row_dict\n",
     "    )"
@@ -674,15 +669,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "84d16476",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabular_docs = pd.read_csv(\"data/additional_data/docs/tabular_manipulations_result_rows.csv\")\n",
+    "### save manipulated queries for aggregated tabular docs\n",
+    "tabular_docs = pd.read_csv(\"additional_data/docs/tabular_manipulations_result_rows.csv\")\n",
     "\n",
     "mapping_domain_doc_id = pd.read_csv(\n",
-    "    \"data/additional_data/docs/tabular_manipulations_result.csv\", usecols=[\"domain\", \"doc_id\"]\n",
+    "    \"additional_data/docs/tabular_manipulations_result.csv\", usecols=[\"domain\", \"doc_id\"]\n",
     ")\n",
     "mapping_dict = mapping_domain_doc_id.set_index(\"domain\")[\"doc_id\"].to_dict()\n",
     "\n",
@@ -700,7 +696,7 @@
     "    )\n",
     "\n",
     "    save_manipulated_query(\n",
-    "        filename=\"data/additional_data/queries/tabular_manipulations_result.csv\",\n",
+    "        filename=\"additional_data/queries/tabular_manipulations_result.csv\",\n",
     "        fieldnames=COLUMNS_QUERIES_MANIPULATED,\n",
     "        **manipulated_query_entry\n",
     "    )"
