add textual_multi manipulations

--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -13,16 +13,16 @@
     "import json\n",
     "from typing import Literal\n",
     "\n",
-    "filename: Literal[\"manipulation_textual\", \"manipulation_tabular\"]\n",
+    "filename: Literal[\"manipulation_single_textual\", \"manipulation_single_tabular\", \"manipulation_multi_textual\"]\n",
     "system_prompts = {\n",
-    "    \"textual\": \"You are an expert in manipulation of textual data.\",\n",
-    "    \"tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
+    "    \"manipulation_single_textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulation_multi_textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
     "}\n",
     "\n",
-    "filename = \"manipulation_tabular\"\n",
+    "filename = \"manipulation_multi_textual\"\n",
     "\n",
-    "system_prompt = system_prompts[\"tabular\"] if filename == \"manipulation_tabular\" else \"\"\n",
-    "system_prompt = system_prompts[\"textual\"] if filename == \"manipulation_textual\" else \"\"\n",
+    "system_prompt = system_prompts[filename]\n",
     "\n",
     "file_name_txt = filename + \".txt\"\n",
     "file_name_json = filename + \".json\"\n",
