finish embeddings + start llm

--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -11,26 +11,26 @@
     "\n",
     "import os\n",
     "import json\n",
-    "from typing import Literal\n",
     "\n",
-    "filename: Literal[\"manipulation_single_textual\", \"manipulation_single_tabular\", \"manipulation_multi_textual\"]\n",
     "system_prompts = {\n",
-    "    \"manipulation_single_textual\": \"You are an expert in manipulation of textual data.\",\n",
-    "    \"manipulation_multi_textual\": \"You are an expert in manipulation of textual data.\",\n",
-    "    \"manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
+    "    \"maniupaltions/manipulation_single_textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulations/manipulation_multi_textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulations/manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
+    "    \"comparison/check_for_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "}\n",
     "\n",
-    "filename = \"manipulation_multi_textual\"\n",
+    "filename = \"comparison/check_for_contradictions\"\n",
     "\n",
     "system_prompt = system_prompts[filename]\n",
     "\n",
-    "file_name_txt = filename + \".txt\"\n",
-    "file_name_json = filename + \".json\"\n",
+    "file_path_txt = os.path.join(\"txt\", filename + \".txt\")\n",
+    "file_path_json = os.path.join(\"json\", filename + \".json\")\n",
     "\n",
-    "with open(os.path.join(\"txt\", file_name_txt), \"r\") as f:\n",
+    "with open(file_path_txt, \"r\") as f:\n",
     "    user_prompt = f.read()\n",
     "\n",
-    "with open(os.path.join(\"json\", file_name_json), \"w\") as f:\n",
+    "os.makedirs(os.path.dirname(file_path_json), exist_ok=True)\n",
+    "with open(file_path_json, \"w\") as f:\n",
     "    content = {\"prompt_name\": filename, \"system_prompt\": system_prompt, \"user_prompt\": user_prompt}\n",
     "    json.dump(content, f)"
    ]
