--- a/1-topic_modeling.ipynb
+++ b/1-topic_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1256c69b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3cd890fd",
    "metadata": {},
    "outputs": [],
@@ -81,8 +81,8 @@
     "        [\n",
     "            docs_original,\n",
     "            docs_manipulated_single_textual,\n",
-    "            docs_manipulated_single_tabular,\n",
     "            docs_manipulated_multi_textual,\n",
+    "            docs_manipulated_single_tabular,\n",
     "        ],\n",
     "        sort=False,\n",
     "    )"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "aa26b458",
    "metadata": {},
    "outputs": [
@@ -119,47 +119,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "fd35bac3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### NMF\n",
+    "### NMF (perfect condictions)\n",
+    "# nmf = NMF(n_components=108, init=\"nndsvda\", max_iter=400)\n",
+    "# nmf = nmf.fit(tfidf_features[:108])\n",
+    "# nmf_data = nmf.transform(tfidf_features)\n",
+    "# nmf_data_normalised = normalize(nmf_data, norm=\"l1\", axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0cc2286c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### NMF (only no. of topics known)\n",
     "nmf = NMF(n_components=108, init=\"nndsvda\", max_iter=400)\n",
-    "nmf = nmf.fit(tfidf_features[:108])\n",
-    "nmf_data = nmf.transform(tfidf_features)\n",
-    "# nmf_data = nmf.fit_transform(tfidf_features)\n",
+    "nmf_data = nmf.fit_transform(tfidf_features)\n",
     "nmf_data_normalised = normalize(nmf_data, norm=\"l1\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "6c35c883",
    "metadata": {},
    "outputs": [],
    "source": [
     "### LSA\n",
-    "lsa = TruncatedSVD(n_components=108)\n",
-    "lsa_data = lsa.fit_transform(tfidf_features)\n",
-    "lsa_data_normalised = normalize(lsa_data, norm=\"l2\", axis=1)"
+    "# lsa = TruncatedSVD(n_components=108)\n",
+    "# lsa_data = lsa.fit_transform(tfidf_features)\n",
+    "# lsa_data_normalised = normalize(lsa_data, norm=\"l2\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "f6592352",
    "metadata": {},
    "outputs": [],
    "source": [
     "### LDA\n",
-    "lda = LatentDirichletAllocation(n_components=108)\n",
-    "lda_data_normalised = lda.fit_transform(tfidf_features, normalize=True)"
+    "# lda = LatentDirichletAllocation(n_components=108)\n",
+    "# lda_data_normalised = lda.fit_transform(tfidf_features, normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "f2553110",
    "metadata": {},
    "outputs": [],
@@ -196,12 +208,12 @@
     "    # Select the indices up to and including that point\n",
     "    selected_indices = sorted_indices[: cutoff + 1]\n",
     "\n",
-    "    return selected_indices"
+    "    return selected_indices.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "280b51ee",
    "metadata": {},
    "outputs": [],
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "4b4cd9df",
    "metadata": {},
    "outputs": [
@@ -234,8 +246,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Avg. number of topics: 3.01\n",
-      "Recall: 0.97\n"
+      "Recall: 56.67 %\n",
+      "Recall on non-tabular docs: 85.0 %\n",
+      "Average comparisons to make: 13.87\n"
      ]
     },
     {
@@ -263,61 +276,49 @@
        "      <th>doc_vector</th>\n",
        "      <th>original_doc_ids</th>\n",
        "      <th>topics</th>\n",
-       "      <th>len(topics)</th>\n",
-       "      <th>topic_hitrate</th>\n",
-       "      <th>num_non-zeros_in_vector</th>\n",
+       "      <th>topics_hitrate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>108</th>\n",
        "      <td>100134</td>\n",
-       "      <td>[0.9294, 0.0359, 0.0137, 0.0062, 0.0035, 0.002...</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.000...</td>\n",
        "      <td>[134]</td>\n",
-       "      <td>[37, 98]</td>\n",
-       "      <td>2</td>\n",
+       "      <td>[9]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
        "      <td>100136</td>\n",
-       "      <td>[0.9968, 0.0016, 0.0007, 0.0003, 0.0003, 0.000...</td>\n",
+       "      <td>[0.0, 0.0020720391791662052, 0.004018328717750...</td>\n",
        "      <td>[136]</td>\n",
-       "      <td>[35]</td>\n",
-       "      <td>1</td>\n",
+       "      <td>[5, 11, 104, 94, 98, 9, 30, 78, 89]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
        "      <td>100139</td>\n",
-       "      <td>[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
        "      <td>[139]</td>\n",
-       "      <td>[62]</td>\n",
-       "      <td>1</td>\n",
+       "      <td>[11]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
        "      <td>100046</td>\n",
-       "      <td>[0.9989, 0.0003, 0.0003, 0.0002, 0.0001, 0.000...</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 8.170...</td>\n",
        "      <td>[46]</td>\n",
-       "      <td>[29]</td>\n",
-       "      <td>1</td>\n",
+       "      <td>[23]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
        "      <td>100047</td>\n",
-       "      <td>[0.8849, 0.0932, 0.0082, 0.0035, 0.0034, 0.002...</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
        "      <td>[47]</td>\n",
-       "      <td>[17, 1]</td>\n",
-       "      <td>2</td>\n",
+       "      <td>[10]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -326,114 +327,107 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>166</th>\n",
-       "      <td>400207</td>\n",
-       "      <td>[0.4945, 0.2989, 0.0514, 0.0268, 0.0251, 0.023...</td>\n",
-       "      <td>[207]</td>\n",
-       "      <td>[9, 103, 101, 85, 64, 23, 60, 40]</td>\n",
-       "      <td>8</td>\n",
+       "      <td>400110</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.000...</td>\n",
+       "      <td>[110]</td>\n",
+       "      <td>[45, 105, 54, 103]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>167</th>\n",
-       "      <td>400213</td>\n",
-       "      <td>[0.5692, 0.0653, 0.0509, 0.0461, 0.0431, 0.040...</td>\n",
-       "      <td>[213]</td>\n",
-       "      <td>[72, 98, 73, 13, 11, 40, 101, 60, 23, 2, 17, 69]</td>\n",
-       "      <td>12</td>\n",
+       "      <td>400116</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[116]</td>\n",
+       "      <td>[70, 36, 105, 54]</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>168</th>\n",
-       "      <td>400214</td>\n",
-       "      <td>[0.5735, 0.1258, 0.0654, 0.0547, 0.0431, 0.036...</td>\n",
-       "      <td>[214]</td>\n",
-       "      <td>[27, 89, 60, 100, 23, 87, 101, 13, 51]</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>300001</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.004799967831828898, 0.0...</td>\n",
+       "      <td>[46, 47, 52, 59, 66, 71, 72, 77, 78, 79]</td>\n",
+       "      <td>[26]</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>169</th>\n",
-       "      <td>400110</td>\n",
-       "      <td>[0.7654, 0.0411, 0.0283, 0.0271, 0.0244, 0.023...</td>\n",
-       "      <td>[110]</td>\n",
-       "      <td>[76, 71, 100, 95, 26, 23, 59, 25, 3]</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>300002</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[134, 136, 139, 112, 114, 115, 119, 123, 125, ...</td>\n",
+       "      <td>[37]</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>170</th>\n",
-       "      <td>400116</td>\n",
-       "      <td>[0.8383, 0.0748, 0.0428, 0.0265, 0.0128, 0.001...</td>\n",
-       "      <td>[116]</td>\n",
-       "      <td>[73, 88, 65]</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>300003</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
+       "      <td>[179, 181, 198, 199, 208, 209, 207, 205, 212, ...</td>\n",
+       "      <td>[39]</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>63 rows × 7 columns</p>\n",
+       "<p>63 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     doc_id                                         doc_vector  \\\n",
-       "108  100134  [0.9294, 0.0359, 0.0137, 0.0062, 0.0035, 0.002...   \n",
-       "109  100136  [0.9968, 0.0016, 0.0007, 0.0003, 0.0003, 0.000...   \n",
-       "110  100139  [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
-       "111  100046  [0.9989, 0.0003, 0.0003, 0.0002, 0.0001, 0.000...   \n",
-       "112  100047  [0.8849, 0.0932, 0.0082, 0.0035, 0.0034, 0.002...   \n",
+       "108  100134  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.000...   \n",
+       "109  100136  [0.0, 0.0020720391791662052, 0.004018328717750...   \n",
+       "110  100139  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "111  100046  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 8.170...   \n",
+       "112  100047  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
        "..      ...                                                ...   \n",
-       "166  400207  [0.4945, 0.2989, 0.0514, 0.0268, 0.0251, 0.023...   \n",
-       "167  400213  [0.5692, 0.0653, 0.0509, 0.0461, 0.0431, 0.040...   \n",
-       "168  400214  [0.5735, 0.1258, 0.0654, 0.0547, 0.0431, 0.036...   \n",
-       "169  400110  [0.7654, 0.0411, 0.0283, 0.0271, 0.0244, 0.023...   \n",
-       "170  400116  [0.8383, 0.0748, 0.0428, 0.0265, 0.0128, 0.001...   \n",
+       "166  400110  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.000...   \n",
+       "167  400116  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "168  300001  [0.0, 0.0, 0.0, 0.0, 0.004799967831828898, 0.0...   \n",
+       "169  300002  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "170  300003  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
        "\n",
-       "    original_doc_ids                                            topics  \\\n",
-       "108            [134]                                          [37, 98]   \n",
-       "109            [136]                                              [35]   \n",
-       "110            [139]                                              [62]   \n",
-       "111             [46]                                              [29]   \n",
-       "112             [47]                                           [17, 1]   \n",
-       "..               ...                                               ...   \n",
-       "166            [207]                 [9, 103, 101, 85, 64, 23, 60, 40]   \n",
-       "167            [213]  [72, 98, 73, 13, 11, 40, 101, 60, 23, 2, 17, 69]   \n",
-       "168            [214]            [27, 89, 60, 100, 23, 87, 101, 13, 51]   \n",
-       "169            [110]              [76, 71, 100, 95, 26, 23, 59, 25, 3]   \n",
-       "170            [116]                                      [73, 88, 65]   \n",
+       "                                      original_doc_ids  \\\n",
+       "108                                              [134]   \n",
+       "109                                              [136]   \n",
+       "110                                              [139]   \n",
+       "111                                               [46]   \n",
+       "112                                               [47]   \n",
+       "..                                                 ...   \n",
+       "166                                              [110]   \n",
+       "167                                              [116]   \n",
+       "168           [46, 47, 52, 59, 66, 71, 72, 77, 78, 79]   \n",
+       "169  [134, 136, 139, 112, 114, 115, 119, 123, 125, ...   \n",
+       "170  [179, 181, 198, 199, 208, 209, 207, 205, 212, ...   \n",
        "\n",
-       "     len(topics)  topic_hitrate  num_non-zeros_in_vector  \n",
-       "108            2            1.0                       14  \n",
-       "109            1            1.0                       16  \n",
-       "110            1            1.0                       10  \n",
-       "111            1            1.0                        9  \n",
-       "112            2            1.0                       16  \n",
-       "..           ...            ...                      ...  \n",
-       "166            8            1.0                       19  \n",
-       "167           12            1.0                       19  \n",
-       "168            9            1.0                       22  \n",
-       "169            9            1.0                       22  \n",
-       "170            3            1.0                        8  \n",
+       "                                  topics  topics_hitrate  \n",
+       "108                                  [9]             1.0  \n",
+       "109  [5, 11, 104, 94, 98, 9, 30, 78, 89]             1.0  \n",
+       "110                                 [11]             1.0  \n",
+       "111                                 [23]             1.0  \n",
+       "112                                 [10]             1.0  \n",
+       "..                                   ...             ...  \n",
+       "166                   [45, 105, 54, 103]             1.0  \n",
+       "167                    [70, 36, 105, 54]             1.0  \n",
+       "168                                 [26]             0.0  \n",
+       "169                                 [37]             0.0  \n",
+       "170                                 [39]             0.0  \n",
        "\n",
-       "[63 rows x 7 columns]"
+       "[63 rows x 5 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### evaluate method\n",
+    "import importlib\n",
+    "from utils import evaluation\n",
+    "\n",
+    "importlib.reload(evaluation)\n",
+    "\n",
     "transformed_data = nmf_data_normalised\n",
     "\n",
     "docs = pd.DataFrame(\n",
@@ -447,19 +441,21 @@
     "\n",
     "docs[\"original_doc_ids\"] = docs.apply(merge_original_ids, axis=1)\n",
     "docs = docs.drop([\"original_doc_id_tmp\", \"original_doc_ids_tmp\"], axis=1)\n",
-    "\n",
-    "\n",
     "docs[\"topics\"] = docs[\"doc_vector\"].apply(calc_topics_for_cumulative_threshold, args=(0.95,))\n",
-    "docs[\"len(topics)\"] = docs[\"topics\"].apply(len)\n",
-    "docs[\"topic_hitrate\"] = docs.apply(calc_topic_hitrate, axis=1)\n",
-    "docs[\"num_non-zeros_in_vector\"] = docs[\"doc_vector\"].apply(lambda v: sum(i > 0 for i in v))\n",
     "\n",
-    "print(f\"Avg. number of topics: {round(docs[\"len(topics)\"].mean(), 2)}\")\n",
-    "docs[\"doc_vector\"] = docs[\"doc_vector\"].apply(lambda v: np.sort(v)[::-1]).apply(lambda v: [round(i, 4) for i in v])\n",
+    "# docs[\"len(topics)\"] = docs[\"topics\"].apply(len)\n",
+    "# docs[\"topic_hitrate\"] = docs.apply(calc_topic_hitrate, axis=1)\n",
+    "# docs[\"num_non-zeros_in_vector\"] = docs[\"doc_vector\"].apply(lambda v: sum(i > 0 for i in v))\n",
     "\n",
+    "# print(f\"Avg. number of topics: {round(docs[\"len(topics)\"].mean(), 2)}\")\n",
+    "# docs[\"doc_vector\"] = docs[\"doc_vector\"].apply(lambda v: np.sort(v)[::-1]).apply(lambda v: [round(i, 4) for i in v])\n",
+    "\n",
+    "\n",
+    "docs, recall = evaluation.evaluate_clusters(docs, \"topics\")\n",
     "filtered_docs = docs.loc[docs[\"original_doc_ids\"].notna()]\n",
-    "print(f\"Recall: {round(filtered_docs[\"topic_hitrate\"].mean(), 2)}\")\n",
-    "\n",
+    "print(f\"Recall: {round(recall * 100, 2)} %\")\n",
+    "print(f\"Recall on non-tabular docs: {round(filtered_docs[\"topics_hitrate\"][:-3].mean() * 100, 2)} %\")\n",
+    "print(f\"Average comparisons to make: {evaluation.count_avg_related_docs(docs, \"topics\"):.2f}\")\n",
     "filtered_docs\n"
    ]
   }
