multi textual amnipulations are working

--- a/prompts/txt_to_json.ipynb
+++ b/prompts/txt_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "31c6450b",
    "metadata": {},
    "outputs": [],
@@ -15,11 +15,14 @@
     "system_prompts = {\n",
     "    \"maniupaltions/manipulation_single_textual\": \"You are an expert in manipulation of textual data.\",\n",
     "    \"manipulations/manipulation_multi_textual\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulations/manipulation_multi_textual_v02\": \"You are an expert in manipulation of textual data.\",\n",
+    "    \"manipulations/manipulation_multi_textual_v03\": \"You are an expert in manipulation of textual data.\",\n",
     "    \"manipulations/manipulation_single_tabular\": \"You are an expert in manipulation and transformation of textual data.\",\n",
     "    \"comparison/check_for_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
+    "    \"comparison/extract_contradictions\": \"You are an expert at comparing documents with each other.\",\n",
     "}\n",
     "\n",
-    "filename = \"comparison/check_for_contradictions\"\n",
+    "filename = \"manipulations/manipulation_multi_textual_v03\"\n",
     "\n",
     "system_prompt = system_prompts[filename]\n",
     "\n",
